<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="#14FFEB3B"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textColorHighlight="@android:color/holo_green_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/ageId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColor="@android:color/holo_green_light"/>

    <Button
        android:id="@+id/button1Id"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:textAlignment="center"
        android:textSize="16dp"
        android:textStyle="bold|italic"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:textAlignment="center"
            android:textSize="16dp"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            android:textAlignment="center"
            android:textSize="16dp"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#12FFEB3B"
        android:padding="5dp">

        <TextView
            android:id="@+id/detailsId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold|italic" />
    </ScrollView>



</LinearLayout>